[package]
name = "ajour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
